--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <section id="perfil" class="seccion">
         <h2>PERFIL OCUPACIONAL</h2>
         <p>
-        Me llamo mi nombre es Mauricio Urdaneta y soy técnico en programación de software 
+         Me llamo Mauricio Urdaneta y soy técnico en programación de software 
         tengo mucho interés por el desarrollo web. y en especial la parte de backend
-        Cuento con conocimientos en html css y javascript adicionalmente también manejo python,
-        soy una persona responsable proactiva apasionada con mucha creatividad para idear soluciones
-        y crear nuevos proyectos en un entorno profesional 
+        Cuento con conocimientos en html, css y javascript adicionalmente también manejo python;
+        soy una persona responsable, proactiva, apasionada con mucha creatividad para idear soluciones
+        y crear nuevos proyectos en un entorno profesional.
         </p>
     </section>
     
