comentando bloqueando temporalmente proyectos

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <button id="boton-habilidades">Habilidades</button>
         <button id="boton-tecnologias">Tecnologias</button>
         <button id="boton-experiencia">Experiencia</button>
-        <button id="boton-proyectos">Proyectos</button>
+        <!-- <button id="boton-proyectos">Proyectos</button> -->
             
         
     </header>
