ajustando imagen de whatsapp

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <p>Haz click en alguno de los siguientes iconos para contactarme</p>
         <a href="https://github.com/Mauricio4-alt" target="_blank"> <img src="./images/github.jpg" alt="image" class="contacto"></a>
         <a href="https://www.linkedin.com/in/mauricio-urdaneta-aaa557196/" target="_blank"> <img src="./images/linkedin.df3dbdf7-e6b9-4d2a-a5ad-3b91e430d172" alt="image" class="contacto"></a>
-        <a href="https://wa.me/573102728720" target="_blank"> <img src="./images/whatsapp.png" alt="image" class="contacto"></a>
+        <a href="https://wa.me/573102728720" target="_blank"> <img src="./images/whatsApp.png" alt="image" class="contacto"></a>
         
     </footer>
         
