chore: agregando proyecto de certificación y cambiando descripción del perfil

--- a/index.html
+++ b/index.html
@@ -30,11 +30,8 @@
             <img src="assets/foto.jpeg" alt="Foto de Mauricio Urdaneta" >
             <h2>Sobre mí</h2>
             <p>
-                Soy técnico en programación de software y actualmente curso el tecnólogo en Análisis y Desarrollo de Software. <br>
-                Tengo formación en tecnologías como <strong>Python</strong>, <strong>JavaScript</strong> ; 
-                manejo frameworks como <strong>Flask</strong> y <strong>Express</strong>  
-                Cuento con un año de experiencia programando tanto en empresa como en proyectos personales. 
-                Soy una persona proactiva, creativa, con buena capacidad de resolución de problemas y una gran curiosidad por aprender cosas nuevas.
+                Técnico en Programación de Software (SENA) con enfoque en desarrollo backend con Python y formación en curso como Tecnólogo en Análisis y Desarrollo de Software, orientado a fortalecer mi perfil profesional. Cuento con experiencia en la construcción de interfaces web con React.js, desarrollo e implementación de APIs REST con Flask y Python, e integración de servicios en entornos colaborativos. Apasionado por la automatización de procesos y la optimización de datos mediante tecnologías como OCR y expresiones regulares, además del manejo de máquinas virtuales en AWS. Interesado en el diseño de soluciones que impulsen la eficiencia y transformación digital dentro de las organizaciones. Me destaco por mi adaptabilidad, pensamiento crítico y rápida capacidad de aprendizaje. Nivel de inglés A2 (en formación continua). 
+
             </p>
         </section>
 
@@ -67,8 +64,15 @@
                 </article>
                 <article class="proyecto">
                 <h3>Mini Juego JS</h3>
-                <p>Juego interactivo hecho con JavaScript puro y Canvas.</p>
+                <p>MiniJuego hecho con técnologías basicas de la web HTML,CSS, Javascript, al estilo de Pokemón y juega y diviertete con tus mascotas favoritas. </p>
                 <a href="https://mauricio4-alt.github.io/mokepon/mokepon.html" target="_blank">Ver Demo</a>
+                </article>
+                <article class="proyecto">
+                <h3>Aprende byte a byte</h3>
+                <p>Proyecto de certificación para técnico en programación de software, consiste en enseñar y capacitar a distintos usuarios en programación 
+                tu encontraás toda la documentacion técnica necesaria, aquí trabajé con varios compañeros de forma colaborativa a la vez que aprendia Javascript, React y Express     
+                </p>
+                <a href="https://mauricio4-alt.github.io/mokepon/mokepon.html" target="_blank">Ver en GitHub</a>
                 </article>
             </div>
         </section>
