chore: agregando recuadro herramientas de desarrollo

--- a/index.html
+++ b/index.html
@@ -47,8 +47,15 @@
                 </div>
                 <div class="Lenguajes-librerias">
                     <h3>Librerias</h3>
-                        <p>Flask</p>
-                        <p>Express</p>
+                    <p>Flask</p>
+                    <p>Express</p>
+                    <p>React</p>
+                </div>
+                <div class="Lenguajes-librerias">
+                    <h3>herramientas de desarrollo</h3>
+                    <p>Docker</p>
+                    <p>GitHub</p>
+                    <p>VS CODE</p>
                 </div>
                         
             </div>
