fixed: Errores de ortografía

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <p>React</p>
                 </div>
                 <div class="Lenguajes-librerias">
-                    <h3>herramientas de desarrollo</h3>
+                    <h3>HERRAMIENTAS DE DESARROLLO</h3>
                     <p>Docker</p>
                     <p>GitHub</p>
                     <p>VS CODE</p>
