agregando ruta aprende byte a byte

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <p>Proyecto de certificación para técnico en programación de software, consiste en enseñar y capacitar a distintos usuarios en programación 
                 tu encontraás toda la documentacion técnica necesaria, aquí trabajé con varios compañeros de forma colaborativa a la vez que aprendia Javascript, React y Express     
                 </p>
-                <a href="https://mauricio4-alt.github.io/mokepon/mokepon.html" target="_blank">Ver en GitHub</a>
+                <a href="https://github.com/HardmandDev/Aprende_Byte_a_Byte" target="_blank">Ver en GitHub</a>
                 </article>
             </div>
         </section>
