docs:agregando nueva foto de perfil

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
     <main>
         <section id="perfil">
-            <img src="assets/foto.jpeg" alt="Foto de Mauricio Urdaneta" >
+            <img src="assets/foto.jpg" alt="Foto de Mauricio Urdaneta" >
             <h2>Sobre mí</h2>
             <p>
                 Técnico en Programación de Software (SENA) con enfoque en desarrollo backend con Python y formación en curso como Tecnólogo en Análisis y Desarrollo de Software, orientado a fortalecer mi perfil profesional. Cuento con experiencia en la construcción de interfaces web con React.js, desarrollo e implementación de APIs REST con Flask y Python, e integración de servicios en entornos colaborativos. Apasionado por la automatización de procesos y la optimización de datos mediante tecnologías como OCR y expresiones regulares, además del manejo de máquinas virtuales en AWS. Interesado en el diseño de soluciones que impulsen la eficiencia y transformación digital dentro de las organizaciones. Me destaco por mi adaptabilidad, pensamiento crítico y rápida capacidad de aprendizaje. Nivel de inglés A2 (en formación continua). 
